[package]
name = "jobs"
version = "0.0.1"
authors = ["John Kåre Alsaker <john.kare.alsaker@gmail.com>"]
description = "build system"
license = "MIT"
edition = "2018"

[dependencies]
crossbeam-utils = "0.6.5"
parking_lot = "0.7.1"
lazy_static = "1.0.0"
bincode = "1.0.0"
serde_json = "1.0"
serde_derive = "1.0.37"
serde = "1.0.37"
scoped-tls = "0.1.1"