[package]
name = "jobs-proc-macro"
version = "0.0.1"
authors = ["John Kåre Alsaker <john.kare.alsaker@gmail.com>"]
description = "job proc macro for jobs crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "0.4"
proc-macro2 = { version = "0.2", features = ["nightly"] }

[dependencies.syn]
version = "0.12.13"
features = ["full", "fold", "parsing", "printing", "extra-traits"]
default-features = false
